--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,14 @@ dependencies:
 #  native_pdf_view: ^4.0.1
 #  advance_pdf_viewer: ^1.2.2
 #  youtube_player_flutter: ^8.0.0
+#  youtube_player_iframe: ^2.0.0
+#  flutter_inappwebview: ^5.2.0
+#  audioplayers: ^0.18.0
+#  just_audio: ^0.7.0
+  intl: ^0.17.0
+  group_radio_button: ^1.1.0
+  splashscreen: ^1.3.5
+  url_launcher: ^6.0.9
   cool_alert: ^1.1.0
   syncfusion_flutter_pdfviewer: ^19.1.56-beta
   grouped_buttons: ^1.0.4
@@ -40,6 +48,7 @@ dependencies:
   http: ^0.13.3
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
